[gd_scene load_steps=4 format=3 uid="uid://b5v5kiat676gb"]

[ext_resource type="Script" path="res://Scripts/globalscript.gd" id="1_ser07"]
[ext_resource type="Texture2D" uid="uid://bevamq4n8sn5k" path="res://Images/green-arrow-png-3.png" id="2_2bwtt"]

[sub_resource type="LabelSettings" id="LabelSettings_426l1"]
font_size = 55
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[node name="Global" type="CanvasLayer"]
layer = 2
script = ExtResource("1_ser07")

[node name="SkillPointsButton" type="Button" parent="."]
visible = false
offset_left = 174.0
offset_top = 6.0
offset_right = 281.0
offset_bottom = 138.0
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
icon = ExtResource("2_2bwtt")
flat = true
expand_icon = true

[node name="SkillPointsText" type="Label" parent="SkillPointsButton"]
layout_mode = 2
anchor_bottom = 0.303
offset_left = -51.0
offset_top = 41.0
offset_right = 153.0
offset_bottom = 88.004
text = "TEST"
label_settings = SubResource("LabelSettings_426l1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FortitudeTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ManaTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="GlobalLevelUpLabel" type="RichTextLabel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 925.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 50
bbcode_enabled = true
scroll_active = false

[node name="WelcomeText" type="RichTextLabel" parent="."]
offset_left = 82.0
offset_top = 385.0
offset_right = 999.0
offset_bottom = 1152.0
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 50
bbcode_enabled = true
scroll_active = false

[connection signal="pressed" from="SkillPointsButton" to="." method="_on_skill_points_button_pressed"]
[connection signal="timeout" from="FortitudeTimer" to="." method="_on_fortitude_timer_timeout"]
[connection signal="timeout" from="ManaTimer" to="." method="_on_mana_timer_timeout"]
